# athena

./: .gitignore  README.md  athena.py  environment.yaml  labels2d.py  labelsrefine.py  montage.py  pyproject.toml  triangulaterefine.py  triangulation.py
.github/workflows/: publish.yml  python-publish.yml
athena/: __init__.py  athena.py  calibration_refine.py  hamer_hands.py  labels2d.py  montage.py  triangulaterefine.py  visualization.py
docs/: index.md
docs/assets/css/: custom.css
tests/: test_athena.py  test_calibration_refine.py  test_face_reprojection.py
