[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-tracking"
dynamic = ["version"]
authors = [
  { name="Jonathan Michaels", email="jmichae@yorku.ca" },
    { name="Daanish Mulla", email="daanish.mulla@gmail.com"}
]
description = "ATHENA: Automatically Tracking Hands Expertly with No Annotations"
readme = "README.md"
requires-python = "==3.12.*"
keywords = ["athena", "hand tracking", "pose estimation", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "av",
    "mediapipe",
    "numpy",
    "matplotlib",
    "tqdm",
    "scipy",
    "toml",
    "moviepy",
    "opencv-python",
]

[project.optional-dependencies]
hamer = [
    "torch>=2.0",
    "torchvision>=0.15",
    "gdown",
    "smplx==0.1.28",
    "yacs",
    "timm",
    "einops",
    "pytorch-lightning",
    "chumpy",
    "webdataset",
]

[tool.setuptools.dynamic]
version = {attr = "athena.__version__"}

[project.scripts]
athena = "athena.athena:main"
athena-montage = "athena.montage:main"

[tool.setuptools]
packages = ["athena"]

[project.urls]
"GitHub" = "https://github.com/neural-control-and-computation-lab/athena"

[tool.setuptools.package-data]
"athena" = [
    "labels2d.py",
    "triangulaterefine.py",
    "visualization.py",
    "athena.py",
    "montage.py",
    "hamer_hands.py",
    "models/hand_landmarker.task",
    "models/pose_landmarker_full.task",
    "models/face_landmarker.task",
    "models/blaze_face_short_range.tflite",
    "logo.png",
]
